--- a/index.html
+++ b/index.html
@@ -45,13 +45,26 @@
             </nav>
             <div class="edica-landing-header-content">
                <div id="edicaLandingHeaderCarousel" class="carousel slide" data-ride="carousel">
-                   <ol class="carousel-indicators">
+                   <div class="row">
+                               <div class="col-md-6 carousel-content-wrapper">
+                                   <h1 >Get Started Power social proof for your brands.</h1>
+                                   <p>He has led a remarkable campaign, defying the traditional mainstream parties courtesy of his En Marche! movement.</p>
+                                   <div class="carousel-content-btns">
+                                       <a href="#!" class="btn btn-success"> <i class="fab fa-apple mr-2"></i> App Store</a>
+                                       <a href="#!" class="btn btn-secondary"> <i class="fab fa-android mr-2"></i>  Google Play</a>
+                                    </div>
+                               </div>
+                               <div class="col-md-6 carousel-img-wrapper">
+                                   <img src="assets/images/Slider_1.png" alt="carousel-img" class="img-fluid" width="350px">
+                               </div>
+                           </div>
+<!--                    <ol class="carousel-indicators">
                        <li data-target="#edicaLandingHeaderCarousel" data-slide-to="0" class="active">.01</li>
                        <li data-target="#edicaLandingHeaderCarousel" data-slide-to="1">.02</li>
                        <li data-target="#edicaLandingHeaderCarousel" data-slide-to="2">.03</li>
-                   </ol>
-                   <div class="carousel-inner" role="listbox">
-                       <div class="carousel-item active">
+                   </ol> -->
+<!--                    <div class="carousel-inner" role="listbox"> -->
+<!--                        <div class="carousel-item active">
                            <div class="row">
                                <div class="col-md-6 carousel-content-wrapper">
                                    <h1 >Get Started Power social proof for your brands.</h1>
@@ -65,8 +78,8 @@
                                    <img src="assets/images/Slider_1.png" alt="carousel-img" class="img-fluid" width="350px">
                                </div>
                            </div>
-                       </div>
-                       <div class="carousel-item">
+                       </div> -->
+<!--                        <div class="carousel-item">
                             <div class="row">
                                 <div class="col-md-6 carousel-content-wrapper">
                                     <h1>Get Started Power social proof for your brands.</h1>
@@ -80,8 +93,8 @@
                                     <img src="assets/images/Slider_1.png" alt="carousel-img" class="img-fluid" width="350px">
                                 </div>
                             </div>
-                       </div>
-                       <div class="carousel-item">
+                       </div> -->
+<!--                        <div class="carousel-item">
                             <div class="row">
                                 <div class="col-md-6 carousel-content-wrapper">
                                     <h1>Get Started Power social proof for your brands.</h1>
@@ -95,8 +108,8 @@
                                     <img src="assets/images/Slider_1.png" alt="carousel-img" class="img-fluid" width="350px">
                                 </div>
                             </div>
-                       </div>
-                   </div>
+                       </div> -->
+<!--                    </div> -->
                </div> 
             </div>
         </div>
