--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
 <!--                     <img src="assets/images/logo.svg" alt="Edica"> -->
-                    <span>Artosku</span>
+                    <span><b>Artosku</b></span>
                 </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#edicaMainNav" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,9 +37,6 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav mt-2 mt-lg-0">
-<!--                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span class="flag-icon flag-icon-squared rounded-circle flag-icon-gb"></span> Eng</a>
-                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#">Masuk</a>
                         </li>
@@ -47,72 +44,19 @@
                 </div>
             </nav>
             <div class="edica-landing-header-content">
-               <div id="edicaLandingHeaderCarousel" class="carousel slide" data-ride="carousel">
+               <div id="edicaLandingHeaderCarousel">
                    <div class="row">
                                <div class="col-md-6 carousel-content-wrapper">
-                                   <h1 >Get Started Power social proof for your brands.</h1>
-                                   <p>He has led a remarkable campaign, defying the traditional mainstream parties courtesy of his En Marche! movement.</p>
+                                   <h1>Pencatatan Keuangan Mudah & Cepat.</h1>
+                                   <p>Catat pemasukan dan pengeluaran harian kamu secara praktis. Pantau saldo, atur anggaran, dan raih tujuan keuanganmu..</p>
                                    <div class="carousel-content-btns">
-                                       <a href="#!" class="btn btn-success"> <i class="fab fa-apple mr-2"></i> App Store</a>
-                                       <a href="#!" class="btn btn-secondary"> <i class="fab fa-android mr-2"></i>  Google Play</a>
+                                       <a href="#!" class="btn btn-secondary"> <i class="fab fa-android mr-2"></i> Unduh di Google Playstore</a>
                                     </div>
                                </div>
                                <div class="col-md-6 carousel-img-wrapper">
                                    <img src="assets/images/Slider_1.png" alt="carousel-img" class="img-fluid" width="350px">
                                </div>
-                           </div>
-<!--                    <ol class="carousel-indicators">
-                       <li data-target="#edicaLandingHeaderCarousel" data-slide-to="0" class="active">.01</li>
-                       <li data-target="#edicaLandingHeaderCarousel" data-slide-to="1">.02</li>
-                       <li data-target="#edicaLandingHeaderCarousel" data-slide-to="2">.03</li>
-                   </ol> -->
-<!--                    <div class="carousel-inner" role="listbox"> -->
-<!--                        <div class="carousel-item active">
-                           <div class="row">
-                               <div class="col-md-6 carousel-content-wrapper">
-                                   <h1 >Get Started Power social proof for your brands.</h1>
-                                   <p>He has led a remarkable campaign, defying the traditional mainstream parties courtesy of his En Marche! movement.</p>
-                                   <div class="carousel-content-btns">
-                                       <a href="#!" class="btn btn-success"> <i class="fab fa-apple mr-2"></i> App Store</a>
-                                       <a href="#!" class="btn btn-secondary"> <i class="fab fa-android mr-2"></i>  Google Play</a>
-                                    </div>
-                               </div>
-                               <div class="col-md-6 carousel-img-wrapper">
-                                   <img src="assets/images/Slider_1.png" alt="carousel-img" class="img-fluid" width="350px">
-                               </div>
-                           </div>
-                       </div> -->
-<!--                        <div class="carousel-item">
-                            <div class="row">
-                                <div class="col-md-6 carousel-content-wrapper">
-                                    <h1>Get Started Power social proof for your brands.</h1>
-                                    <p>He has led a remarkable campaign, defying the traditional mainstream parties courtesy of his En Marche! movement.</p>
-                                    <div class="carousel-content-btns">
-                                        <a href="#!" class="btn btn-success"> <i class="fab fa-apple mr-2"></i> App Store</a>
-                                        <a href="#!" class="btn btn-secondary"> <i class="fab fa-android mr-2"></i> Google Play</a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 carousel-img-wrapper">
-                                    <img src="assets/images/Slider_1.png" alt="carousel-img" class="img-fluid" width="350px">
-                                </div>
-                            </div>
-                       </div> -->
-<!--                        <div class="carousel-item">
-                            <div class="row">
-                                <div class="col-md-6 carousel-content-wrapper">
-                                    <h1>Get Started Power social proof for your brands.</h1>
-                                    <p>He has led a remarkable campaign, defying the traditional mainstream parties courtesy of his En Marche! movement.</p>
-                                    <div class="carousel-content-btns">
-                                        <a href="#!" class="btn btn-success"> <i class="fab fa-apple mr-2"></i> App Store</a>
-                                        <a href="#!" class="btn btn-secondary"> <i class="fab fa-android mr-2"></i> Google Play</a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 carousel-img-wrapper">
-                                    <img src="assets/images/Slider_1.png" alt="carousel-img" class="img-fluid" width="350px">
-                                </div>
-                            </div>
-                       </div> -->
-<!--                    </div> -->
+                    </div>
                </div> 
             </div>
         </div>
