--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                    <h1>Pencatatan Keuangan Mudah & Cepat.</h1>
                                    <p>Catat pemasukan dan pengeluaran harian kamu secara praktis. Pantau saldo, atur anggaran, dan raih tujuan keuanganmu..</p>
                                    <div class="carousel-content-btns">
-                                       <a href="#!" class="btn btn-secondary"> <i class="fab fa-android mr-2"></i> Unduh di Google Playstore</a>
+                                       <a href="#!" class="btn btn-primary"> <i class="fab fa-android mr-2"></i> Google Playstore</a>
                                     </div>
                                </div>
                                <div class="col-md-6 carousel-img-wrapper">
