--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="/">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="features.html">Features</a>
+                            <a class="nav-link" href="/">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">contact</a>
+                            <a class="nav-link" href="/">contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav mt-2 mt-lg-0">
                         <li class="nav-item mr-2 mb-3 mb-lg-0">
-                            <a class="btn btn-secondary" href="register.html">Sign up</a>
+                            <a class="btn btn-secondary" href="/">Sign up</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-secondary" href="login.html">Login</a>
+                            <a class="btn btn-secondary" href="/">Login</a>
                         </li>
                     </ul>
                 </div>
