--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <div class="header-content">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1>Great app that makes your life awesome</h1>
-                        <p class="text-dark">He has led a remarkable campaign, defying the traditional mainstream parties courtesy of his En Marche! movement.</p>
-                        <button class="btn btn-primary mb-4">Get Started</button>
+                        <h1>Aplikasi keuangan yang bantu atur pemasukan & pengeluaranmu</h1>
+                        <p class="text-dark">Catat semua transaksi harian, kelola anggaran bulanan, dan pantau keuanganmu dengan mudah dalam satu aplikasi.</p>
+                        <button class="btn btn-primary mb-4">Mulai Sekarang</button>
                         <div class="my-2">
-                            <p class="header-app-download-title">GET OUR MOBILE APP</p>
+                            <p class="header-app-download-title">UNDUH APLIKASI KAMI</p>
                         </div>
                         <div>
                             <button class="btn btn-app-download mr-2"><img src="assets/images/ios.svg" alt="App store"></button>
@@ -67,7 +67,8 @@
             </div>
         </div>
     </header>
-    <section class="py-5 mb-5">
+    
+<!--     <section class="py-5 mb-5">
         <div class="container">
             <h2 class="section-title">Application Features</h2>
             <div class="row">
@@ -167,7 +168,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+    
     <section class="py-5 mb-5">
         <div class="container">
             <div class="row">
@@ -175,15 +177,15 @@
                     <img src="assets/images/app_2.png" alt="special offers" class="img-fluid" width="492px">
                 </div>
                 <div class="col-md-6">
-                    <h2 class="section-title">Get special offers on the things you love</h2>
-                    <p class="mb-5">He has led a remarkable campaign, defying the traditional mainstream parties courtesy of his En Marche! movement. For many, however, the campaign has become less about backing Macron and instead about voting against Le Pen, the National Front candidate.</p>
+                    <h2 class="section-title">Fitur Utama Aplikasi Keuangan Kami</h2>
+                    <p class="mb-5">Kelola keuangan harian Anda dengan mudah. Catat pemasukan, pantau pengeluaran, dan atur anggaran secara efisien hanya dalam satu aplikasi.</p>
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <div class="media landing-feature">
                                 <span class="landing-feature-icon"></span>
                                 <div class="media-body">
-                                    <h5>Essentials</h5>
-                                    <p>All the basics for businesses that are just getting started.</p>
+                                    <h5>Pencatatan Pemasukan & Pengeluaran</h5>
+                                    <p>Catat semua transaksi harian dengan cepat dan mudah.</p>
                                 </div>
                             </div>
                         </div>
@@ -191,8 +193,8 @@
                             <div class="media landing-feature">
                                 <span class="landing-feature-icon"></span>
                                 <div class="media-body">
-                                    <h5>Premium</h5>
-                                    <p>All the basics for businesses that are just getting started.</p>
+                                    <h5>Laporan & Grafik Keuangan</h5>
+                                    <p>Pantau arus kas bulanan dan lihat visualisasi pengeluaran per kategori.</p>
                                 </div>
                             </div>
                         </div>
@@ -200,8 +202,17 @@
                             <div class="media landing-feature">
                                 <span class="landing-feature-icon"></span>
                                 <div class="media-body">
-                                    <h5>Standard</h5>
-                                    <p>All the basics for businesses that are just getting started.</p>
+                                    <h5>Anggaran Bulanan (Budgeting)</h5>
+                                    <p>Tetapkan batas pengeluaran dan dapatkan notifikasi jika mendekati limit.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <div class="media landing-feature">
+                                <span class="landing-feature-icon"></span>
+                                <div class="media-body">
+                                    <h5>Keamanan & Backup Data</h5>
+                                    <p>Lindungi data dengan backup otomatis ke cloud.</p>
                                 </div>
                             </div>
                         </div>
