--- a/index.html
+++ b/index.html
@@ -330,42 +330,42 @@
     <section class="py-5 mb-5">
         <div class="container">
             <h2>FAQ</h2>
-            <p class="section-subtitle">Frequently Asked Questions</p>
+            <p class="section-subtitle">Pertanyaan yang Sering Diajukan</p>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="card mb-3 landing-faq-card">
                         <div class="card-header bg-white" id="faqOneTitle">
                             <a href="#faqOneCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                                <h6 class="mb-0">What is Foi app?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                <h6 class="mb-0">Apa itu aplikasi Artosku?</h6> <i class="far fa-plus-square ml-auto"></i>
                             </a>
                         </div>
                         <div id="faqOneCollapse" class="collapse" aria-labelledby="faqOneTitle">
                             <div class="card-body">
-                                <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p class="mb-0 text-gray">Artosku adalah aplikasi pencatatan keuangan pribadi yang membantu kamu mengelola pemasukan dan pengeluaran secara praktis, aman, dan terstruktur.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card mb-3 landing-faq-card">
                         <div class="card-header bg-white" id="faqTwoTitle">
                             <a href="#faqTwoCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                                <h6 class="mb-0">Why should I use Foi app?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                <h6 class="mb-0">Siapa yang bisa melihat catatan saya?</h6> <i class="far fa-plus-square ml-auto"></i>
                             </a>
                         </div>
                         <div id="faqTwoCollapse" class="collapse" aria-labelledby="faqTwoTitle">
                             <div class="card-body">
-                                <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p class="mb-0 text-gray">Seluruh catatan yang kamu buat di Artosku bersifat pribadi dan hanya dapat diakses oleh kamu sendiri, kecuali jika kamu memilih untuk membagikannya.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card mb-3 landing-faq-card">
                         <div class="card-header bg-white" id="faqThreeTitle">
                             <a href="#faqThreeCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                                <h6 class="mb-0">How can I use Foi app?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                <h6 class="mb-0">Kenapa saya harus menggunakan Artosku?</h6> <i class="far fa-plus-square ml-auto"></i>
                             </a>
                         </div>
                         <div id="faqThreeCollapse" class="collapse" aria-labelledby="faqThreeTitle">
                             <div class="card-body">
-                                <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p class="mb-0 text-gray">Dengan Artosku, kamu bisa memantau arus kas harian, menetapkan anggaran bulanan, serta mengetahui ke mana saja uangmu digunakan. Ini membantu kamu membuat keputusan finansial yang lebih bijak.</p>
                             </div>
                         </div>
                     </div>
@@ -374,36 +374,36 @@
                     <div class="card mb-3 landing-faq-card">
                         <div class="card-header bg-white" id="faqFourTitle">
                             <a href="#faqFourCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                                <h6 class="mb-0">Who will see my updates?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                <h6 class="mb-0">Apakah orang lain bisa melihat data keuangan saya?</h6> <i class="far fa-plus-square ml-auto"></i>
                             </a>
                         </div>
                         <div id="faqFourCollapse" class="collapse" aria-labelledby="faqFourTitle">
                             <div class="card-body">
-                                <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p class="mb-0 text-gray">Tidak. Semua data keuangan kamu tersimpan secara aman dan tidak dibagikan ke pihak lain tanpa persetujuanmu.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card mb-3 landing-faq-card">
                         <div class="card-header bg-white" id="faqFiveTitle">
                             <a href="#faqFiveCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                                <h6 class="mb-0">Can people see my connections?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                <h6 class="mb-0">Bagaimana cara menggunakan Artosku?</h6> <i class="far fa-plus-square ml-auto"></i>
                             </a>
                         </div>
                         <div id="faqFiveCollapse" class="collapse" aria-labelledby="faqFiveTitle">
                             <div class="card-body">
-                                <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p class="mb-0 text-gray">Cukup catat setiap pemasukan dan pengeluaran di Artosku. Aplikasi akan otomatis menghitung total saldo dan menyajikan ringkasan keuangan harian, mingguan, dan bulanan.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card mb-3 landing-faq-card">
                         <div class="card-header bg-white" id="faqSixTitle">
                             <a href="#faqSixCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                                <h6 class="mb-0">Being a user, what all rights I have?</h6> <i class="far fa-plus-square ml-auto"></i>
+                                <h6 class="mb-0">Sebagai pengguna, hak apa saja yang saya miliki?</h6> <i class="far fa-plus-square ml-auto"></i>
                             </a>
                         </div>
                         <div id="faqSixCollapse" class="collapse" aria-labelledby="faqSixTitle">
                             <div class="card-body">
-                                <p class="mb-0 text-gray">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p class="mb-0 text-gray">Sebagai pengguna Artosku, kamu memiliki kendali penuh atas datamu. Kamu bisa mengedit, menghapus, atau mengunduh semua catatan keuanganmu kapan saja.</p>
                             </div>
                         </div>
                     </div>
