--- a/index.html
+++ b/index.html
@@ -223,39 +223,31 @@
     </section>
     <section class="py-5 mb-5">
         <div class="container">
-            <h2>Choose the plan that’s right for yor business</h2>
-            <p class="text-muted mb-5">Thank you for your very professional and prompt response. I wished I had found you before </p>
+            <h2>Pilih Paket yang Sesuai untuk Kamu</h2>
+            <p class="text-muted mb-5">Kelola keuangan pribadi lebih mudah bersama Artosku</p>
             <div class="row">
-                <div class="col-lg-4 mb-4">
+                <div class="col-lg-6 mb-4">
                     <div class="card pricing-card border-warning">
                         <div class="card-body">
                             <h3 class="mb-1">Starter</h3>
-                            <h3 class="mb-1 text-warning">Free</h3>
-                            <p class="payment-period">Per month</p>
-                            <p class="mb-4">Thank you for your very professional and prompt response.</p>
-                            <button class="btn btn-outline-warning btn-rounded">Get Started</button>
+                            <h3 class="mb-1 text-warning">Gratis</h3>
+                            <p class="payment-period">Per bulan</p>
+                            <p class="mb-4">
+                              Cocok untuk kamu yang ingin mencatat pemasukan dan pengeluaran harian tanpa batas dan tanpa biaya.
+                            </p>
+                            <button class="btn btn-outline-warning btn-rounded">Mulai Sekarang</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-4">
-                    <div class="card pricing-card border-primary active">
-                        <div class="card-body">
-                            <h3>Popular</h3>
-                            <h3 class="text-primary">$23.00</h3>
-                            <p class="payment-period">Per month</p>
-                            <p class="mb-4">Thank you for your very professional and prompt response.</p>
-                            <button class="btn btn-primary btn-rounded">Get Started</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-4">
+               
+                <div class="col-lg-6 mb-4">
                     <div class="card pricing-card border-success">
                         <div class="card-body">
-                            <h3>Enterprise</h3>
-                            <h3 class="text-success">$40.00</h3>
-                            <p class="payment-period">Per month</p>
-                            <p class="mb-4">Thank you for your very professional and prompt response.</p>
-                            <button class="btn btn-outline-success btn-rounded">Get Started</button>
+                            <h3>Pro <small class="text-muted">(Segera Hadir)</small></h3>
+                            <h3 class="text-success">Berbayar</h3>
+                            <p class="payment-period">Per bulan</p>
+                            <p class="mb-4"> Fitur tambahan seperti ekspor PDF/Excel, anggaran otomatis, dan pengingat transaksi akan segera tersedia.</p>
+                            <button class="btn btn-outline-success btn-rounded">Coming Soon</button>
                         </div>
                     </div>
                 </div>
