--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <h3 class="text-success">Berbayar</h3>
                             <p class="payment-period">Per bulan</p>
                             <p class="mb-4"> Fitur tambahan seperti ekspor PDF/Excel, anggaran otomatis, dan pengingat transaksi akan segera tersedia.</p>
-                            <button class="btn btn-outline-success btn-rounded">Coming Soon</button>
+                            <button class="btn btn-outline-success btn-rounded">Segera Hadir</button>
                         </div>
                     </div>
                 </div>
