--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
                         <span class="fas fa-star checked"></span>
                         <span class="fas fa-star checked"></span>
                     </div>
-                    <h5 class="foi-review-heading">Great support available</h5>
-                    <p class="foi-review-content">Thank you for your very professional and prompt response. I wished I had found you before I spent money on a competitors theme.</p>
+                    <h5 class="foi-review-heading">Layanan yang sangat membantu</h5>
+                    <p class="foi-review-content">Terima kasih atas layanan yang cepat dan sangat profesional. Artosku sangat memudahkan saya mencatat keuangan harian tanpa ribet.</p>
                     <div class="media foi-review-user">
                         <img src="assets/images/avatar/avatar_11.jpg" alt="user" class="avatar">
                         <div class="media-body">
-                            <h6 class="mb-0">Amarachi Nkechi</h6>
-                            <p>UX Designer</p>
+                            <h6 class="mb-0">User 1</h6>
+                            <p>Karyawan</p>
                         </div>
                     </div>
 
@@ -286,13 +286,13 @@
                         <span class="fas fa-star checked"></span>
                         <span class="fas fa-star checked"></span>
                     </div>
-                    <h5 class="foi-review-heading">Great support available</h5>
-                    <p class="foi-review-content">Thank you for your very professional and prompt response. I wished I had found you before I spent money on a competitors theme.</p>
+                    <h5 class="foi-review-heading">Sangat direkomendasikan</h5>
+                    <p class="foi-review-content">Saya bisa mengatur pengeluaran dan pemasukan lebih rapi. Aplikasinya ringan dan mudah digunakan.</p>
                     <div class="media foi-review-user">
                         <img src="assets/images/avatar/avatar_12.jpg" alt="user" class="avatar">
                         <div class="media-body">
-                            <h6 class="mb-0">Margje Jutten</h6>
-                            <p>Developer</p>
+                            <h6 class="mb-0">User 2</h6>
+                            <p>Pelajar</p>
                         </div>
                     </div>
 
@@ -305,13 +305,13 @@
                         <span class="fas fa-star checked"></span>
                         <span class="fas fa-star checked"></span>
                     </div>
-                    <h5 class="foi-review-heading">Great support available</h5>
-                    <p class="foi-review-content">Thank you for your very professional and prompt response. I wished I had found you before I spent money on a competitors theme.</p>
+                    <h5 class="foi-review-heading">Solusi terbaik untuk kelola uang</h5>
+                    <p class="foi-review-content">Awalnya saya coba-coba, tapi sekarang malah jadi aplikasi wajib. Fitur budgeting-nya keren banget.</p>
                     <div class="media foi-review-user">
                         <img src="assets/images/avatar/avatar_13.jpg" alt="user" class="avatar">
                         <div class="media-body">
-                            <h6 class="mb-0">Monica Böttger</h6>
-                            <p>UX Designer</p>
+                            <h6 class="mb-0">User 3</h6>
+                            <p>Ibu Rumah Tangga</p>
                         </div>
                     </div>
 
