--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
     </section>
     <section class="py-5 mb-5">
         <div class="container">
-            <h2>Satisfied Users</h2>
-            <p class="text-muted mb-5">Thank you for your very professional and prompt response. I wished I had found you before </p>
+            <h2>Ulasan Pengguna</h2>
+            <p class="text-muted mb-5">Terima kasih atas layanan yang cepat dan profesional. Seandainya saya menemukan Artosku lebih awal!</p>
             <div class="row">
                 <div class="col-md-4 foi-review mb-5 mb-md-0">
                     <div class="foi-rating">
