--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     <div class="media foi-review-user">
                         <img src="assets/images/avatar/avatar_11.jpg" alt="user" class="avatar">
                         <div class="media-body">
-                            <h6 class="mb-0">User 1</h6>
+                            <h6 class="mb-0">Sofia Martínez</h6>
                             <p>Karyawan</p>
                         </div>
                     </div>
@@ -291,7 +291,7 @@
                     <div class="media foi-review-user">
                         <img src="assets/images/avatar/avatar_12.jpg" alt="user" class="avatar">
                         <div class="media-body">
-                            <h6 class="mb-0">User 2</h6>
+                            <h6 class="mb-0">Kenji Tanaka</h6>
                             <p>Pelajar</p>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                     <div class="media foi-review-user">
                         <img src="assets/images/avatar/avatar_13.jpg" alt="user" class="avatar">
                         <div class="media-body">
-                            <h6 class="mb-0">User 3</h6>
+                            <h6 class="mb-0">Amina Yusuf</h6>
                             <p>Ibu Rumah Tangga</p>
                         </div>
                     </div>
