--- a/index.html
+++ b/index.html
@@ -407,18 +407,19 @@
         <div class="container">
             <div class="row footer-content">
                 <div class="col-xl-6 col-lg-7 col-md-8">
-                    <h2 class="mb-0">Do you want to know more or just have a question? write to us.</h2>
+                    <h2 class="mb-0">Ingin tahu lebih banyak atau punya pertanyaan? Hubungi kami kapan saja!</h2>
                 </div>
                 <div class="col-md-4 col-lg-5 col-xl-6 py-3 py-md-0 d-md-flex align-items-center justify-content-end">
-                    <a href="contact.html" class="btn btn-danger btn-lg">Contact form</a>
+                    <a href="contact.html" class="btn btn-danger btn-lg">Hubungi Kami</a>
                 </div>
             </div>
             <div class="row footer-widget-area">
                 <div class="col-md-3">
                     <div class="py-3">
-                        <img src="assets/images/logo-white.svg" alt="FOI">
+<!--                         <img src="assets/images/logo-white.svg" alt="FOI"> -->
+                        <span>[]Artosku App</span>
                     </div>
-                    <p class="font-os font-weight-semibold mb3">Get our mobile app</p>
+                    <p class="font-os font-weight-semibold mb3">Unduh aplikasi mobile kami</p>
                     <div>
                         <button class="btn btn-app-download mr-2"><img src="assets/images/ios.svg" alt="App store"></button>
                         <button class="btn btn-app-download"><img src="assets/images/android.svg" alt="play store"></button>
