--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     </ul>
                     <ul class="navbar-nav mt-2 mt-lg-0">
                         <li class="nav-item mr-2 mb-3 mb-lg-0">
-                            <a class="btn btn-secondary" href="/">Sign up</a>
+                            <a class="btn btn-secondary" href="https://app-artosku.vercel.app/register">Daftar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-secondary" href="/">Login</a>
+                            <a class="btn btn-secondary" href="https://app-artosku.vercel.app/login">Masuk</a>
                         </li>
                     </ul>
                 </div>
