--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Artosku</title>
+    <title>artosku</title>
     <link rel="stylesheet" href="assets/vendors/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -16,7 +16,7 @@
             <nav class="navbar navbar-expand-lg navbar-light foi-navbar">
                 <a class="navbar-brand" href="index.html">
 <!--                     <img src="assets/images/logo.svg" alt="FOI"> -->
-                    <span>[]Artosku</span>
+                    <span>artosku</span>
                 </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,21 +27,18 @@
                             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">About</a>
+                            <a class="nav-link" href="/">Tentang kami</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Features</a>
+                            <a class="nav-link" href="#feature">Fitur</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">contact</a>
+                            <a class="nav-link" href="#contact">Kontak</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav mt-2 mt-lg-0">
-                        <li class="nav-item mr-2 mb-3 mb-lg-0">
-                            <a class="btn btn-secondary" href="https://app-artosku.vercel.app/register">Daftar</a>
-                        </li>
                         <li class="nav-item">
-                            <a class="btn btn-secondary" href="https://app-artosku.vercel.app/login">Masuk</a>
+                            <a class="btn btn-secondary" href="https://app-artosku.vercel.app">Masuk</a>
                         </li>
                     </ul>
                 </div>
@@ -170,7 +167,7 @@
         </div>
     </section> -->
     
-    <section class="py-5 mb-5">
+    <section class="py-5 mb-5" id="feature">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mb-5 mb-md-0">
@@ -403,7 +400,7 @@
             </div>
         </div>
     </section>
-    <footer class="foi-footer text-white">
+    <footer class="foi-footer text-white" id="contact">
         <div class="container">
             <div class="row footer-content">
                 <div class="col-xl-6 col-lg-7 col-md-8">
@@ -417,7 +414,7 @@
                 <div class="col-md-3">
                     <div class="py-3">
 <!--                         <img src="assets/images/logo-white.svg" alt="FOI"> -->
-                        <span>[]Artosku App</span>
+                        <span>artosku app</span>
                     </div>
                     <p class="font-os font-weight-semibold mb3">Unduh aplikasi mobile kami</p>
                     <div>
@@ -469,7 +466,7 @@
                 </div>
                 <div class="col-md-3 mt-3 mt-md-0">
                     <p>
-                        &copy; Artosku 2025.
+                        &copy; artosku 2025.
                     </p>
                     <p>All rights reserved.</p>
                     <nav class="social-menu">
